# delegate-match

./: .gitignore  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  docs.yml
src/: associated.rs  delegate_arm.rs  delegate_entry.rs  delegate_match.rs  expr.rs  lib.rs  substitute.rs  util.rs
tests/: all_assoc.rs  assoc_in_guard.rs  complex_assoc_tokens.rs  complex_struct_pat.rs  entry_pat_in_guard.rs  expr_continues.rs  expr_postfix_question.rs  if_guard.rs  non_ident_no_path.rs  optional_assoc_if_guard.rs  or_pat.rs  path_prefix_nonident.rs  placeholder_in_guard.rs  variant_name.rs  wildcard_entry.rs
tests/compile_fail/: attributes_grouped_arm.rs  attributes_grouped_arm.stderr  comma.rs  comma.stderr  empty_path.rs  empty_path.stderr  invalid_body_after_substitution.rs  invalid_body_after_substitution.stderr  missing_entry_comma.rs  missing_entry_comma.stderr  non_ident_extra_pattern.rs  non_ident_extra_pattern.stderr
